--- a/config/nginx/conf.d/mgt.conf
+++ b/config/nginx/conf.d/mgt.conf
@@ -1,16 +1,7 @@
 server {
    listen 80;
-   server_name mgt.lc;
+   server_name _ mgt.lc;
    set $MAGE_ROOT /var/www/mgt;
    set $MAGE_DEBUG_SHOW_ARGS 1;
    include /opt/docker/etc/nginx/custom-vhost/mgt.conf;
-}
-
-server {
-    listen 443;
-    server_name mgt.lc;
-    set $MAGE_ROOT /var/www/mgt;
-    set $MAGE_DEBUG_SHOW_ARGS 1;
-    include /opt/docker/etc/nginx/custom-vhost/mgt.conf;
-    include /var/key/custom-vhost.ssl.conf;
 }
