--- a/.env
+++ b/.env
@@ -1,19 +1,5 @@
 STACK_NAME=mgt
 
-PHP_INI=./config/php/php.ini
-MYSQL_DATA_DIR=./data/mysql
-MYSQL_LOG_DIR=./logs/mysql
-
-# If you already has the port 80 in use, you can change it (for example if you have Apache)
-HOST_MACHINE_UNSECURE_HOST_PORT=80
-HOST_MACHINE_SECURE_HOST_PORT=443
-
-# If you already has the port 3306 in use, you can change it (for example if you have MySQL)
-HOST_MACHINE_MYSQL_PORT=3306
-
-# If you already has the port 6379 in use, you can change it (for example if you have Redis)
-HOST_MACHINE_REDIS_PORT=6379
-
 # MySQL root user password
 MYSQL_ROOT_PASSWORD=root
 
@@ -21,3 +7,23 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=docker
 MYSQL_PASSWORD=docker
 MYSQL_DATABASE=docker
+
+
+# MGT env
+MAGENTO_ADMIN_URI=admin
+MAGENTO_DB_HOST=a
+MAGENTO_DB_NAME=a
+MAGENTO_DB_USER=a
+MAGENTO_DB_PASSWORD=a
+MAGENTO_INSTALL_BASE_URL=a
+MAGENTO_INSTALL_BASE_SECURE_URL=a
+MAGENTO_INSTALL_USE_SECURE=1
+MAGENTO_INSTALL_USE_SECURE_ADMIN=1
+MAGENTO_INSTALL_LANGUAGE=en_US
+MAGENTO_INSTALL_TIMEZONE=Asia/Ho_Chi_Minh
+MAGENTO_INSTALL_CURRENCY=VND
+MAGENTO_INSTALL_ADMIN_FIRSTNAME=khoi
+MAGENTO_INSTALL_ADMIN_LASTNAME=le
+MAGENTO_INSTALL_ADMIN_EMAIL=mr.vjcspy@gmail.com
+MAGENTO_INSTALL_ADMIN_USERNAME=khoile
+MAGENTO_INSTALL_ADMIN_PASSWORD=admin123
