--- a/config/nginx/vhost.common.d/mgt.conf
+++ b/config/nginx/vhost.common.d/mgt.conf
@@ -26,7 +26,7 @@
 ##
 ## In production mode, you should uncomment the 'expires' directive in the /static/ location block
 
-root $MAGE_ROOT/pub;
+root /app/pub;
 
 index index.php;
 autoindex off;
@@ -42,7 +42,7 @@ location /.user.ini {
 
 # PHP entry point for setup application
 location ~* ^/setup($|/) {
-    root $MAGE_ROOT;
+    root /app;
     location ~ ^/setup/index.php {
         fastcgi_pass   php;
 
@@ -67,7 +67,7 @@ location ~* ^/setup($|/) {
 
 # PHP entry point for update application
 location ~* ^/update($|/) {
-    root $MAGE_ROOT;
+    root /app;
 
     location ~ ^/update/index.php {
         fastcgi_split_path_info ^(/update/index.php)(/.+)$;
@@ -96,7 +96,7 @@ location /pub/ {
     location ~ ^/pub/media/(downloadable|customer|import|theme_customization/.*\.xml) {
         deny all;
     }
-    alias $MAGE_ROOT/pub/;
+    alias /app/pub/;
     add_header X-Frame-Options "SAMEORIGIN";
 }
 
