--- a/.env
+++ b/.env
@@ -11,12 +11,12 @@ MYSQL_DATABASE=docker
 
 # MGT env
 MAGENTO_ADMIN_URI=admin
-MAGENTO_DB_HOST=a
-MAGENTO_DB_NAME=a
-MAGENTO_DB_USER=a
-MAGENTO_DB_PASSWORD=a
-MAGENTO_INSTALL_BASE_URL=a
-MAGENTO_INSTALL_BASE_SECURE_URL=a
+MAGENTO_DB_HOST=mgt-db.cceuogsakfm2.ap-southeast-1.rds.amazonaws.com
+MAGENTO_DB_NAME=vngdev
+MAGENTO_DB_USER=admin
+MAGENTO_DB_PASSWORD=!!1qaz!QAZ
+MAGENTO_INSTALL_BASE_URL=http://vng.ggg.systems
+MAGENTO_INSTALL_BASE_SECURE_URL=https://vng.ggg.systems
 MAGENTO_INSTALL_USE_SECURE=1
 MAGENTO_INSTALL_USE_SECURE_ADMIN=1
 MAGENTO_INSTALL_LANGUAGE=en_US
