--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MYSQL_DATABASE=docker
 
 # MGT env
 MAGENTO_ADMIN_URI=admin
-MAGENTO_DB_HOST=mgt-db.cceuogsakfm2.ap-southeast-1.rds.amazonaws.com
+MAGENTO_DB_HOST=a
 MAGENTO_DB_NAME=vngdev
 MAGENTO_DB_USER=admin
 MAGENTO_DB_PASSWORD=!!1qaz!QAZ
