--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,18 +51,18 @@ services:
 #      RABBITMQ_DEFAULT_USER: "rabbitmq"
 #      RABBITMQ_DEFAULT_PASS: "rabbitmq"
 #      RABBITMQ_DEFAULT_VHOST: "/"
-#  redis:
-#    container_name: "${STACK_NAME}-rds"
-#    domainname: "${STACK_NAME}-rds"
-#    hostname: "${STACK_NAME}-rds"
-#    image: redis:latest
-#    # command: redis-server --appendonly yes --requirepass root
-#    command: ["redis-server", "--appendonly", "yes"]
-#    ports:
-#      - "6379:6379"
-#    networks:
-#      - ebs-docker-network
-#    env_file: .env
+  redis:
+    container_name: "${STACK_NAME}-rds"
+    domainname: "${STACK_NAME}-rds"
+    hostname: "${STACK_NAME}-rds"
+    image: redis:latest
+    # command: redis-server --appendonly yes --requirepass root
+    command: ["redis-server", "--appendonly", "yes"]
+    ports:
+      - "6379:6379"
+    networks:
+      - ebs-docker-network
+    env_file: .env
 networks:
   ebs-docker-network:
 
