--- a/bin/webserver/nginx/vhost.conf
+++ b/bin/webserver/nginx/vhost.conf
@@ -3,7 +3,7 @@ server {
 
     server_name  _ *.vm docker *.lc;
 
-
+    error_log /var/log/nginx/error_log warn;
     include /opt/docker/etc/nginx/vhost.common.d/*.conf;
 }
 
@@ -15,7 +15,7 @@ server {
     listen 443 default_server ssl http2;
 
     server_name  _ *.vm docker *.lc;
-
+    error_log /var/log/nginx/error_log warn;
     include /opt/docker/etc/nginx/vhost.common.d/*.conf;
     include /opt/docker/etc/nginx/vhost.ssl.conf;
 }
