- config dev vng

--- a/config/nginx/vhost.common.d/mgt.conf
+++ b/config/nginx/vhost.common.d/mgt.conf
@@ -26,7 +26,7 @@
 ##
 ## In production mode, you should uncomment the 'expires' directive in the /static/ location block
 
-root /app/pub;
+root /app/mgt/pub;
 
 index index.php;
 autoindex off;
