--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - ebs-docker-network
     volumes:
       - nfsmount:/app:cached
+      - /Users/vjcspy/work/ggg/yutang/src/public_html:/var/www/yutang_fe:cached
+      - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
       - ./docker_data/logs/nginx/error.log:/var/log/nginx/error_log
       - ./config/nginx/vhost.common.d:/opt/docker/etc/nginx/vhost.common.d
       - ./config/key/vhost.ssl.conf:/opt/docker/etc/nginx/vhost.ssl.conf
