--- a/bin/webserver/nginx/vhost.d/ssl.conf
+++ b/bin/webserver/nginx/vhost.d/ssl.conf
@@ -1,5 +1,5 @@
 ssl           on;
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
 
-ssl_certificate     /var/key/localhost.pem;
-ssl_certificate_key /var/key/localhost-key.pem;
+ssl_certificate     /opt/docker/etc/nginx/ssl/localhost.pem;
+ssl_certificate_key /opt/docker/etc/nginx/ssl/localhost-key.pem;
