--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -1,14 +1,16 @@
 ##############
-# SSL Default magento server
+# Default magento server
 ##############
 
 server {
     listen 80 default_server;
 
     server_name  _ *.vm docker *.lc;
+    set $MAGE_ROOT /app/mgt;
 
-    error_log /var/log/nginx/error_log warn;
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    error_log /var/log/nginx/error_log error;
 }
 
 ##############
@@ -19,7 +21,10 @@ server {
     listen 443 default_server ssl http2;
 
     server_name  _ *.vm docker *.lc;
-    error_log /var/log/nginx/error_log warn;
+    set $MAGE_ROOT /app/mgt;
+
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
 }
