--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
     networks:
       - ebs-docker-network
     volumes:
-      - nfsmount:/app
+      - MAGENTO_FOLDER:/app
       - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
     env_file: .env
     environment:
       PHP_IDE_CONFIG: "serverName=mgt" #debug cli
       XDEBUG_REMOTE_AUTOSTART: 0
-      #      XDEBUG_REMOTE_HOST: "host.docker.internal" #linux
-      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
+      XDEBUG_REMOTE_HOST: "host.docker.internal" #linux
+#      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
   mysql:
     image: mysql:5.7
     container_name: "${STACK_NAME}-db"
@@ -40,11 +40,3 @@ services:
     env_file: .env
 networks:
   ebs-docker-network:
-
-volumes:
-  nfsmount:
-    driver: local
-    driver_opts:
-      type: nfs
-      o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
-      device: ":${SOURCE_DIR}"
