--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,9 @@ services:
     env_file: .env
     environment:
       PHP_IDE_CONFIG: "serverName=mgt" #debug cli
-      #      XDEBUG_REMOTE_HOST: "host.docker.internal" #ubuntu
-      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
+      XDEBUG_REMOTE_AUTOSTART: 0
+      XDEBUG_REMOTE_HOST: "host.docker.internal" #linux
+  #      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
   mysql:
     image: mysql:5.7
     container_name: "${STACK_NAME}-db"
