--- a/bin/webserver/Dockerfile
+++ b/bin/webserver/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get -y upgrade
 RUN apt-get -y install htop
 RUN apt-get -y install net-tools
 RUN apt-get -y install iproute2
+RUN apt-get -y install iputils-ping
 
 ## -----------------------------Install builtin cron-----------------------------
 RUN docker-service-enable cron
