--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -5,8 +5,8 @@
 server {
     listen 80 default_server;
 
-    server_name  _ *.vm docker *.lc;
-    set $MAGE_ROOT /app;
+    server_name  yt.mgt.lc;
+    set $MAGE_ROOT /app/yt;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -20,8 +20,35 @@ server {
 server {
     listen 443 default_server ssl http2;
 
-    server_name  _ *.vm docker *.lc;
-    set $MAGE_ROOT /app;
+    server_name  yt.mgt.lc;
+    set $MAGE_ROOT /app/yt;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 80;
+
+    server_name  vng.mgt.lc;
+    set $MAGE_ROOT /app/vng;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+##############
+# SSL
+##############
+
+server {
+    listen 443 ssl http2;
+
+    server_name  vng.mgt.lc;
+    set $MAGE_ROOT /app/vng;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
