--- a/bin/webserver/php/php.ini
+++ b/bin/webserver/php/php.ini
@@ -18,13 +18,13 @@ upload_max_filesize = 2M
 ;xdebug.trace_output_name=timestamp
 
 ; debugger settings
-xdebug.remote_autostart=1
+xdebug.remote_autostart=0
 xdebug.remote_enable=1
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
 xdebug.remote_port=9000
 xdebug.remote_connect_back=0
-xdebug.remote_log = /var/log/xdebug/xdebug.log
+;xdebug.remote_log = /var/log/xdebug/xdebug.log
 
 ; profiler settings
 ;xdebug.profiler_append=0
