--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     networks:
       - ebs-docker-network
     volumes:
-      - /home/vjcspy/work/ggg/bom:/app
+      - ./src:/app
       - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
     env_file: .env
     environment:
-      PHP_IDE_CONFIG: "serverName=mgt" #debug cli
+      PHP_IDE_CONFIG: "serverName=web" #debug cli
       XDEBUG_REMOTE_AUTOSTART: 0
       XDEBUG_REMOTE_HOST: "host.docker.internal" #linux
   #      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
