--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -55,3 +55,31 @@ server {
 
     error_log /var/log/nginx/error_log error;
 }
+
+
+server {
+    listen 80;
+
+    server_name  vng-current.mgt.lc;
+    set $MAGE_ROOT /app/vng_current;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+##############
+# SSL
+##############
+
+server {
+    listen 443 ssl http2;
+
+    server_name  vng-current.mgt.lc;
+    set $MAGE_ROOT /app/vng_current;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
