--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - /home/vjcspy/work/ggg/bom:/app/yt
       - /home/vjcspy/work/vinagiay/src/web:/app/vng
       - /home/vjcspy/work/vinagiay/src/vng_current:/app/vng_current
+      - /home/vjcspy/work/vinagiay/src/vng_ee:/app/vng_ee
       - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
     env_file: .env
     environment:
