--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -10,7 +10,8 @@ server {
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
-    error_log /var/log/nginx/error_log error;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
 
 ##############
@@ -26,5 +27,6 @@ server {
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
 
-    error_log /var/log/nginx/error_log error;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
