--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       - "443:443"
     networks:
       - ebs-docker-network
+    depends_on:
+      - es
     volumes:
       - /home/vjcspy/work/ggg/bom:/app/yt
+      - /home/vjcspy/work/mgt24:/app/mgt24
       - /home/vjcspy/work/vinagiay/src/web:/app/vng
       - /home/vjcspy/work/vinagiay/src/vng_current:/app/vng_current
       - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
@@ -39,6 +42,25 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    env_file: .env
+  es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
+    container_name: "${STACK_NAME}-es"
+    domainname: "${STACK_NAME}-es"
+    hostname: "${STACK_NAME}-es"
+    environment:
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 9300:9300
+    networks:
+      - ebs-docker-network
     env_file: .env
   #  rabbit:
   #    networks:
@@ -70,4 +92,7 @@ services:
 networks:
   ebs-docker-network:
 
+volumes:
+  elasticsearch-data:
+    driver: local
 
