--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -5,7 +5,7 @@
 server {
     listen 80 default_server;
 
-    server_name  _ *.vm docker *.lc;
+    server_name  _ *.vm docker *.lc *.vm.test ;
     set $MAGE_ROOT /app;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
@@ -20,7 +20,7 @@ server {
 server {
     listen 443 default_server ssl http2;
 
-    server_name  _ *.vm docker *.lc;
+    server_name  _ *.vm docker *.lc *.vm.test;
     set $MAGE_ROOT /app;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
