--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -5,7 +5,7 @@
 server {
     listen 80 default_server;
 
-    server_name  _ *.vm docker *.lc *.vm.test ;
+    server_name  _ *.vm docker *.lc;
     set $MAGE_ROOT /app;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
@@ -20,8 +20,41 @@ server {
 server {
     listen 443 default_server ssl http2;
 
-    server_name  _ *.vm docker *.lc *.vm.test;
+    server_name  _ *.vm docker *.lc;
     set $MAGE_ROOT /app;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 80;
+
+    server_name  yt.vm.test;
+    set $MAGE_ROOT /app/yt;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+##############
+# SSL
+##############
+
+server {
+    listen 443 ssl http2;
+
+    server_name  yt.vm.test;
+    set $MAGE_ROOT /app/yt;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
