--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       PHP_IDE_CONFIG: "serverName=web" #debug cli
       XDEBUG_REMOTE_AUTOSTART: 0
-      XDEBUG_REMOTE_HOST: "host.docker.internal" #linux
+      XDEBUG_REMOTE_HOST: "host.vm" #linux
   #      XDEBUG_REMOTE_HOST: "docker.for.mac.localhost" #mac
   mysql:
     image: mysql:5.7
