--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -32,8 +32,8 @@ server {
 server {
     listen 80;
 
-    server_name  vng.mgt.lc;
-    set $MAGE_ROOT /app/vng;
+    server_name  porto2.vm.test;
+    set $MAGE_ROOT /app/porto2;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -47,8 +47,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name  vng.mgt.lc;
-    set $MAGE_ROOT /app/vng;
+    server_name  porto2.vm.test;
+    set $MAGE_ROOT /app/porto2;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
@@ -57,126 +57,99 @@ server {
 }
 
 
-server {
-    listen 80;
 
-    server_name  vng-current.mgt.lc;
-    set $MAGE_ROOT /app/vng_current;
+# server {
+#     listen 80;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-##############
-# SSL
-##############
-
-server {
-    listen 443 ssl http2;
-
-    server_name  vng-current.mgt.lc;
-    set $MAGE_ROOT /app/vng_current;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
+#     server_name  yt-web.mgt.lc;
 
 
-server {
-    listen 80;
+#         ## Your only path reference.
+#         root /app/yt_wp;
+#         ## This should be in your http block and if it is, it's not needed here.
+#         index index.php;
 
-    server_name  yt-web.mgt.lc;
+#         location = /favicon.ico {
+#                 log_not_found off;
+#                 access_log off;
+#         }
 
+#         location = /robots.txt {
+#                 allow all;
+#                 log_not_found off;
+#                 access_log off;
+#         }
 
-        ## Your only path reference.
-        root /app/yt_wp;
-        ## This should be in your http block and if it is, it's not needed here.
-        index index.php;
+#         location / {
+#                 # This is cool because no php is touched for static content.
+#                 # include the "?$args" part so non-default permalinks doesn't break when using query string
+#                 try_files $uri $uri/ /index.php?$args;
+#         }
 
-        location = /favicon.ico {
-                log_not_found off;
-                access_log off;
-        }
+#         location ~ \.php$ {
+#                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+#                 include fastcgi_params;
+#                 fastcgi_intercept_errors on;
+#                 fastcgi_pass php;
+#                 #The following parameter can be also included in fastcgi_params file
+#                 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         }
 
-        location = /robots.txt {
-                allow all;
-                log_not_found off;
-                access_log off;
-        }
-
-        location / {
-                # This is cool because no php is touched for static content.
-                # include the "?$args" part so non-default permalinks doesn't break when using query string
-                try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~ \.php$ {
-                #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-                include fastcgi_params;
-                fastcgi_intercept_errors on;
-                fastcgi_pass php;
-                #The following parameter can be also included in fastcgi_params file
-                fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
-                log_not_found off;
-        }
+#         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+#                 expires max;
+#                 log_not_found off;
+#         }
 
 
-    error_log /var/log/nginx/error_log error;
-}
+#     error_log /var/log/nginx/error_log error;
+# }
 
-##############
-# SSL
-##############
+# ##############
+# # SSL
+# ##############
 
-server {
-    listen 443 ssl http2;
+# server {
+#     listen 443 ssl http2;
 
-    server_name  yt-web.mgt.lc;
+#     server_name  yt-web.mgt.lc;
     
-        ## Your only path reference.
-        root /app/yt_wp;
-        ## This should be in your http block and if it is, it's not needed here.
-        index index.php;
+#         ## Your only path reference.
+#         root /app/yt_wp;
+#         ## This should be in your http block and if it is, it's not needed here.
+#         index index.php;
 
-        location = /favicon.ico {
-                log_not_found off;
-                access_log off;
-        }
+#         location = /favicon.ico {
+#                 log_not_found off;
+#                 access_log off;
+#         }
 
-        location = /robots.txt {
-                allow all;
-                log_not_found off;
-                access_log off;
-        }
+#         location = /robots.txt {
+#                 allow all;
+#                 log_not_found off;
+#                 access_log off;
+#         }
 
-        location / {
-                # This is cool because no php is touched for static content.
-                # include the "?$args" part so non-default permalinks doesn't break when using query string
-                try_files $uri $uri/ /index.php?$args;
-        }
+#         location / {
+#                 # This is cool because no php is touched for static content.
+#                 # include the "?$args" part so non-default permalinks doesn't break when using query string
+#                 try_files $uri $uri/ /index.php?$args;
+#         }
 
-        location ~ \.php$ {
-                #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-                include fastcgi_params;
-                fastcgi_intercept_errors on;
-                fastcgi_pass php;
-                #The following parameter can be also included in fastcgi_params file
-                fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+#         location ~ \.php$ {
+#                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+#                 include fastcgi_params;
+#                 fastcgi_intercept_errors on;
+#                 fastcgi_pass php;
+#                 #The following parameter can be also included in fastcgi_params file
+#                 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         }
 
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
-                log_not_found off;
-        }
+#         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+#                 expires max;
+#                 log_not_found off;
+#         }
 
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+#     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
 
-    error_log /var/log/nginx/error_log error;
-}
+#     error_log /var/log/nginx/error_log error;
+# }
