--- a/bin/webserver/php/php.ini
+++ b/bin/webserver/php/php.ini
@@ -24,7 +24,7 @@ xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
 xdebug.remote_port=9000
 xdebug.remote_connect_back=0
-xdebug.remote_log = /var/log/xdebug/xdebug.log
+xdebug.remote_log = /app/xdebug.log
 
 ; profiler settings
 ;xdebug.profiler_append=0
