--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -1,66 +1,35 @@
-##############
-# Default magento server
-##############
+# server {
+#     listen 80;
 
-server {
-    listen 80 default_server;
+#     server_name  yt.vm.test;
+#     set $MAGE_ROOT /app/yt;
 
-    server_name  _ *.vm docker *.lc;
-    set $MAGE_ROOT /app;
+#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+#     error_log /var/log/nginx/error_log error;
+# }
 
-    error_log /var/log/nginx/error_log error;
-}
+# ##############
+# # SSL
+# ##############
 
-##############
-# SSL
-##############
+# server {
+#     listen 443 ssl http2;
 
-server {
-    listen 443 default_server ssl http2;
+#     server_name  yt.vm.test;
+#     set $MAGE_ROOT /app/yt;
 
-    server_name  _ *.vm docker *.lc;
-    set $MAGE_ROOT /app;
+#     fastcgi_buffers 16 16k;
+#     fastcgi_buffer_size 32k;
+#     proxy_buffer_size 128k;
+#     proxy_buffers 4 256k;
+#     proxy_busy_buffers_size 256k;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+#     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
 
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 80;
-
-    server_name  yt.vm.test;
-    set $MAGE_ROOT /app/yt;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-##############
-# SSL
-##############
-
-server {
-    listen 443 ssl http2;
-
-    server_name  yt.vm.test;
-    set $MAGE_ROOT /app/yt;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
+#     error_log /var/log/nginx/error_log error;
+# }
 
 
 
@@ -93,6 +62,117 @@ server {
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+
+
+server {
+    listen 80;
+
+    server_name  mgt240.vm.test;
+    set $MAGE_ROOT /app/mgt240;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+##############
+# SSL
+##############
+
+server {
+    listen 443 ssl http2;
+
+    server_name  mgt240.vm.test;
+    set $MAGE_ROOT /app/mgt240;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 80;
+
+    server_name  yt-pcms.vm.test;
+    set $MAGE_ROOT /app/yt-pcms;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    server_name  yt-pcms.vm.test;
+    set $MAGE_ROOT /app/yt-pcms;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 80;
+
+    server_name  mgt241.vm.test;
+    set $MAGE_ROOT /app/mgt241;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    server_name  mgt241.vm.test;
+    set $MAGE_ROOT /app/mgt241;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
 
     error_log /var/log/nginx/error_log error;
 }
