--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ services:
       - ebs-docker-network
     volumes:
       - ./src/bom:/app/bom
-      - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf:delegated
+      - ./src/yt-pcms:/app/yt-pcms
+      - ./src/ee_240/mgt240:/app/mgt240
+      - ./src/mgt_ee_241/root:/app/mgt241
+      - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
     env_file: .env
     environment:
       PHP_IDE_CONFIG: "serverName=mgt" #debug cli
@@ -37,25 +40,25 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     env_file: .env
-  # es:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
-  #   container_name: "${STACK_NAME}-es"
-  #   domainname: "${STACK_NAME}-es"
-  #   hostname: "${STACK_NAME}-es"
-  #   environment:
-  #     - discovery.type=single-node
-  #   ulimits:
-  #     memlock:
-  #       soft: -1
-  #       hard: -1
-  #   volumes:
-  #     - elasticsearch-data:/usr/share/elasticsearch/data
-  #   ports:
-  #     - 9200:9200
-  #     - 9300:9300
-  #   networks:
-  #     - ebs-docker-network
-  #   env_file: .env
+  es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
+    container_name: "${STACK_NAME}-es"
+    domainname: "${STACK_NAME}-es"
+    hostname: "${STACK_NAME}-es"
+    environment:
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 9300:9300
+    networks:
+      - ebs-docker-network
+    env_file: .env
   #  rabbit:
   #    networks:
   #      - ebs-docker-network
